# TP-Final-Rob

./: .gitignore  AGENT.md  AGENTS.md  README.md
docs/: 2026-06-30-tb4-laboratory-readiness-implementation-plan.md  2026-06-30-tb4-laboratory-runbook.md  2026-06-30-tb4-laboratory-workflow-design.md  2026-06-30-tb4-laboratory-workflow-implementation.md  arquitectura_sistema_completo.html  main.md  paper_ref.md  parte_a_handoff.md
docs/consignas/: parte_A.md
docs/parte_a/: laboratorio-bag.md  tb4-map-comparison.md
docs/parte_a/scripts/: laboratorio_bag.sh
docs/parte_b/: 01_implementacion.md  02_guia_ejecucion.md  03_resultados_pruebas.md  05_remapeo_sim.md  README.md  tb4-mcl-obstacle-diagnostic.md
docs/parte_b/scripts/: coverage_drive.py  cyclonedds_loopback.xml  gen_landmarks.py  goal_tour.py  plot_mcl_diagnostics.py  setup_parte_b.sh  tour_drive.py
docs/parte_c/: README.md
docs/superpowers/plans/: 2026-06-22-arquitectura-didactica-html.md  2026-06-22-portabilidad-parte-b.md  2026-06-27-correcciones-odom-landmarks.md
docs/superpowers/specs/: 2026-06-22-arquitectura-didactica-html-design.md  2026-06-22-portabilidad-parte-b-design.md
mapas/: map.pgm  map.yaml  map_sim.pgm  map_sim.yaml
paper/: README.md  main.tex  sec_conclusion.tex  sec_parte_a.tex  sec_parte_b.tex  sec_parte_c.tex
src/tp_slam_aruco/: package.xml  setup.py
src/tp_slam_aruco/config/: camera_tb4_0.yaml  rviz_config.rviz
src/tp_slam_aruco/launch/: parte_a_mapa.launch.py  parte_a_slam.launch.py
src/tp_slam_aruco/tp_slam_aruco/: aruco_detector_node.py  aruco_utils.py  graph_slam_node.py  motion_model.py  occupancy_grid_node.py  odometry_node.py
tests/: test_architecture_html.py
tp_final_ws/src/tp_a_slam_aruco/: package.xml  setup.cfg  setup.py
tp_final_ws/src/tp_a_slam_aruco/config/: camera_tb4_0.yaml  camera_tb4_1.yaml  rviz_config.rviz
tp_final_ws/src/tp_a_slam_aruco/launch/: parte_a_mapa.launch.py  parte_a_slam.launch.py
tp_final_ws/src/tp_a_slam_aruco/resource/: tp_a_slam_aruco
tp_final_ws/src/tp_a_slam_aruco/test/: test_aruco_diagnostics.py  test_aruco_filtering.py  (+23 more)
tp_final_ws/src/tp_b_navigation/: package.xml  setup.cfg  setup.py
tp_final_ws/src/tp_b_navigation/config/: landmarks.yaml  parte_b.rviz
tp_final_ws/src/tp_b_navigation/launch/: parte_b.launch.py  parte_b_bag_localization.launch.py  parte_b_localization.launch.py  sim_mapping.launch.py
tp_final_ws/src/tp_b_navigation/test/: test_aruco_mcl_adapter.py  test_build_warning_contracts.py  test_calc_odom_smoke.py  test_dynamic_obstacles.py  test_landmark_io.py  test_landmark_visibility.py  test_mcl_diagnostics.py  test_mcl_models.py  test_mcl_prediction.py  test_navigation_scan_projection.py  test_package_dependency_graph.py  test_planner_core.py  test_platform_profiles.py  test_portable_paths.py  test_real_profile_smoke.py  test_safety_gates.py  test_simulation_contracts.py
tp_final_ws/src/tp_b_navigation/tp_b_navigation/: aruco_mcl_adapter.py  dynamic_obstacles.py  global_planner.py  landmark_io.py  landmark_publisher.py  landmark_sensor.py  landmark_visibility.py  map_loader.py  mcl_diagnostics.py  mcl_localization.py  mcl_models.py  obstacle_monitor.py  planner_core.py  platform_profiles.py  safety_gates.py  scan_projection.py  sim_mapper.py  state_machine.py  utils.py
tp_final_ws/src/tp_c_mission/: package.xml  setup.cfg  setup.py
tp_final_ws/src/tp_c_mission/config/: parte_c.yaml  parte_c_bag.rviz  parte_c_sim.rviz
tp_final_ws/src/tp_c_mission/launch/: parte_c_bag.launch.py  parte_c_real.launch.py  parte_c_sim.launch.py
tp_final_ws/src/tp_c_mission/test/: test_cone_perception.py  test_cone_runtime_contract.py  test_information_exploration.py  test_parte_c_contracts.py  test_real_mission_smoke.py
tp_final_ws/src/tp_c_mission/tp_c_mission/: __init__.py  aruco_mcl_adapter.py  cone_detector_node.py  cone_perception.py  information_exploration.py  mission_manager_node.py
tp_final_ws/src/tp_interfaces/: CMakeLists.txt  package.xml
tp_final_ws/src/tp_platform/: package.xml  setup.cfg  setup.py
tp_final_ws/src/tp_platform/test/: test_tp_platform_profiles.py
tp_final_ws/src/tp_platform/tp_platform/: __init__.py  platform_profiles.py
tp_final_ws/src/tp_slam_aruco/: package.xml  setup.cfg  setup.py
tp_final_ws/src/tp_slam_interfaces/: CMakeLists.txt  package.xml
tp_final_ws/src/tp_slam_interfaces/msg/: LandmarkObservationArray.msg
tp_final_ws/src/tp_slam_interfaces/test/: test_package_contract.py
tp_final_ws/src/turtlebot3_custom_simulation/: CMakeLists.txt  package.xml
tp_final_ws/src/turtlebot3_custom_simulation/include/turtlebot3_custom_simulation/: turtlebot3_custom_simulation.hpp
tp_final_ws/src/turtlebot3_custom_simulation/launch/: custom_casa.launch.py  custom_casa_obs.launch.py  custom_maze.launch.py  custom_room.launch.py  custom_simulation.launch.py
tp_final_ws/src/turtlebot3_custom_simulation/param/: burger.yaml
tp_final_ws/src/turtlebot3_custom_simulation/src/: turtlebot3_custom_simulation.cpp
tp_final_ws/src/turtlebot3_custom_simulation/worlds/: casa.world  casa_o.world  maze.world  room.world  slippery.world
tp_final_ws/src/turtlebot3_custom_simulation/worlds/Armchair/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/ConeBlue/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/ConeRed/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/ConeYellow/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/HospitalBot/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/Sofa/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/Suitcase1/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/Suitcase2H/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/TurtleBot3BurgerRGBD/: model.config  model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/Walls/: model.sdf
tp_final_ws/src/turtlebot3_custom_simulation/worlds/map/: map.pgm  map.yaml
(+69 files in other folders)
