<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tp_slam_aruco</name>
  <version>0.1.0</version>
  <description>
    TP Final Robótica - Opción 3: Graph SLAM basado en marcadores ArUco
    (cámara) + LIDAR, sobre datos reales del TurtleBot4 (RosBag).
    Parte A: generación del mapa.
  </description>
  <maintainer email="equipo@udesa.edu.ar">Equipo TP Final</maintainer>
  <license>MIT</license>

  <!-- Dependencias de build para paquetes Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias de runtime (nodos ROS2 en Python) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- NOTA: gtsam, opencv-contrib (aruco) y numpy se instalan vía pip,
       no son paquetes ROS. Ver README para el setup. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
