<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tp_b_navigation</name>
  <version>0.1.0</version>
  <description>
    TP Final Robótica - Parte B: Navegación autónoma en simulación (Gazebo/TurtleBot3).
    Sistema 3 = Grilla + Landmarks de Cámara (virtuales). Incluye carga del mapa,
    landmarks virtuales con sensor de oclusión, localización por filtro de partículas (MCL),
    planificación A*/Dijkstra, seguimiento de trayectoria y máquina de estados.
  </description>
  <maintainer email="equipo@udesa.edu.ar">Equipo TP Final</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tp_interfaces</exec_depend>

  <!-- numpy se instala vía pip/conda, no es paquete ROS. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
