<?xml version="1.0"?>
<package format="3">
  <name>tp_c_mission</name>
  <version>0.1.0</version>
  <description>Exploración informativa, percepción de conos y despliegue sim-to-real.</description>
  <maintainer email="equipo@udesa.edu.ar">Equipo TP Final</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tp_b_navigation</exec_depend>
  <exec_depend>tp_slam_aruco</exec_depend>
  <exec_depend>tp_slam_interfaces</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
