<?xml version="1.0"?>
<package format="3">
  <name>tp_platform</name>
  <version>0.1.0</version>
  <description>Contratos compartidos de plataforma para perfiles TB3/TB4.</description>
  <maintainer email="equipo@udesa.edu.ar">Equipo TP Final</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
